--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ img,video{height:auto;max-width:100%}
 
 .hover\:scale-105:hover{--tw-scale-x:1.05;--tw-scale-y:1.05;transform:translate(var(--tw-translate-x),var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))}
 .hover\:text-black:hover{--tw-text-opacity:1;color:rgb(0 0 0/var(--tw-text-opacity,1))}
+.hover\:text-blue:hover{--tw-text-opacity:1;color:rgb(59 130 246/var(--tw-text-opacity,1))}
 .hover\:underline:hover{text-decoration-line:underline}
 
 /* ============================================
